# primitive-polynomial

./: .vim.custom  README.markdown  package.nix  primitive-polynomial.cabal
src/: PrimitivePolynomial.hs
test/: PrimitivePolynomialSpec.hs
