name:                primitive-polynomial
version:             0.1.0
synopsis:            Primitive polynomial sequences
description:
  See README.markdown
homepage:            https://github.com/supki/primitive-polynomial
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           2015 Matvey Aksenov
category:            Data
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.markdown

source-repository head
  type: git
  location: https://github.com/supki/primitive-polynomial

library
  default-language:
    Haskell2010
  build-depends:
    base >= 4.8 && < 5
  hs-source-dirs:
    src
  exposed-modules:
    PrimitivePolynomial

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base >= 4.8 && < 5
    , hspec
    , primitive-polynomial
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    PrimitivePolynomialSpec
